<resources>
    <string name="app_name">WeAreError_BubbleSort</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="sort">Sort</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="first_iteration">First Iteration: sorted array</string>
    <string name="second_iteration">First Iteration</string>
    <string name="third_iteration">First Iteration</string>
    <string name="fourth_iteration">First Iteration</string>
    <string name="userInstructions">Enter a series of 3 to 8 digits! Using numbers ONLY!!</string>
    <string name="enterDigits">Enter Digits</string>
    <string name="bubbleImageDescription">Image of bubbles</string>
    <string name="appTitle">WeAreError Bubble Sort</string>
    <string name="applicationTitleDescription">applicationTitle</string>
    <string name="startButtonText">Get Started</string>
    <string name="appDescription">Sort an array of integers using BubbleSort \n\n Enter 3 to 8 digits</string>
    <string name="sortButtonDesc">Click to sort the array</string>
    <string name="backgroundDescription">background image of bubbles</string>

</resources>