<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bubblesImageView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/bubbleImageDescription"
    android:visibility="visible"
    tools:context=".WelcomeActivity">

    <ImageView
        android:id="@+id/bubbleImageView"
        android:layout_width="410dp"
        android:layout_height="768dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="5dp"
        android:alpha=".7"
        android:contentDescription="@string/backgroundDescription"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/bubble_foreground" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="307dp"
        android:layout_height="110dp"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/applicationTitleDescription"
        android:text="@string/appTitle"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="44sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.191"
        tools:text="@string/appTitle" />

    <TextView
        android:id="@+id/appDescriptionTextView"
        android:layout_width="280dp"
        android:layout_height="0dp"
        android:layout_marginTop="120dp"
        android:background="@color/colorPrimary"
        android:text="@string/appDescription"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/getStartedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/startButtonText"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="18sp"
        android:background="@drawable/my_button_bckgrnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appDescriptionTextView"
        app:layout_constraintVertical_bias="0.847" />
</androidx.constraintlayout.widget.ConstraintLayout>