<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bubblesImageView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/bubbleImageDescription"
    android:visibility="visible"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/bubbleImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/bubbleImageViewConstraint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/bubbles_vertical" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="310dp"
        android:layout_height="103dp"
        android:contentDescription="@string/applicationTitleDescription"
        android:text="@string/appTitle"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="44sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.011"
        tools:text="@string/appTitle" />

    <TextView
        android:id="@+id/appDescriptionTextView"
        android:layout_width="280dp"
        android:layout_height="68dp"
        android:background="@color/colorPrimary"
        android:text="@string/appDescription"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/startButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/bubbleImageView"
        app:layout_constraintTop_toTopOf="@+id/bubbleImageView"
        app:layout_constraintVertical_bias="0.44" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/startButtonText"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/bubbleImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/bubbleImageView" />
</androidx.constraintlayout.widget.ConstraintLayout>