<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SortActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userEntryLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/sortedTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userEntryTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterDigits"
            android:inputType="phone"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/sortedTextView"
        android:layout_width="352dp"
        android:layout_height="249dp"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.175" />

    <FrameLayout
        android:layout_width="326dp"
        android:layout_height="107dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sortedTextView"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/sortArrayButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/sortButtonDesc"
            android:text="@string/sort"
            android:textAlignment="center"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="24sp" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>